kimjongku_react/src/index.css
@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css');



*{
    font-family: "Pretendard", sans-serif !important;
    list-style: none ;
    margin:0 ;
    padding:0;
    border:0 ;
    box-sizing:border-box;
    -webkit-tap-highlight-color: transparent;
}


/*--------------------------------------------------------- reset ---------------------------*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video{
	margin:0;
	padding:0;
	border:0;
}


body{
    margin:0;
    padding:0;
    width:100%;
    /*min-width:1600px;*/
    -webkit-text-size-adjust:none;
    -moz-text-size-adjust:none;
    -ms-text-size-adjust:none;
    overflow-y: scroll;
    scrollbar-gutter: stable both-edges;
}


a{
    color:#000;
    display:block;
    text-decoration:none;
    cursor:pointer;
    -webkit-text-fill-color: #000;
}


a:hover, a:active{
    text-decoration:none;
}

button {
    color: inherit;
    -webkit-appearance: none;
    appearance: none;
}


ol, ul{
	list-style:none;
}


span,
em,
b{
    font-style:normal;
    font-size:inherit;
    letter-spacing:inherit;
}

pre{
    line-height:1.76;
}

table{
    width:100%;
	border-spacing:0;
    border-collapse:collapse;
}


select{
    background:url(../../images/cmn/ico_select_arr.svg) no-repeat 50% / 11px;
    background-position-x:calc(100% - 15.5px);
    padding-right:30px !important;
}

select option{
	font-size:inherit;
}


select::-ms-expand{
    display:none; /* 네이티브 화살표 제거*/
}


select:focus::-ms-value{
	background-color:inherit;
	color:inherit;
}


/* 초기화 */
input:not([type=checkbox],[type=radio],[type=range]),
textarea,
button,
select{
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none; 
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    -o-border-radius: 0;
    border-radius: 0; 
}

/* 자동완성 */
input:-webkit-autofill,
input:-internal-autofill-selected{
	-webkit-box-shadow:0 0 0 30px #f4f4f4 inset;
	-webkit-text-fill-color:#000000;
}


input::-moz-focus-inner,
button::-moz-focus-inner{
    border:0;
    padding:0;
}



/* readonly & disabled */
input[readonly],
input[disabled],
input[type="checkbox"]:disabled + label::before,
input[type="radio"]:disabled + label::before{
	background-color:#f3f3f3 !important;
	cursor:default;
    color:#ccc !important;
}

input[type="checkbox"]:disabled + label,
input[type="radio"]:disabled + label{color:#ccc !important;}

input[type="checkbox"]:disabled + label::before,
input[type="radio"]:disabled + label::before{border-color:#a2a2a2 !important;}


::placeholder{
	color:#888;
    font-size:inherit;
    font-weight:300;
}


button{
	background:none;
    border:0;
    -webkit-user-select:none;
    -moz-user-select:none;
    -ms-user-select:none;
    cursor:pointer;
    vertical-align:middle;
}


address{
    font-style:normal;
}


/* 스크롤 디자인 */
::-webkit-scrollbar{
	width:9px;
	height:9px;
	background-color:#ebebeb;
}


::-webkit-scrollbar-thumb{
	background:#c9c9c9;
}


:focus{
	outline:none;
	/* box-shadow:0 0 0 2px #000; */
	box-shadow:0 0 0 2px transparent;
}

input:focus{
	outline:none;
	box-shadow:0 0 0 1px #000;
}
	
	
::selection{
	background:#ddd;
}


strong {
    font-size: inherit;
}


body {
  margin: 0;
  padding: 0;
  background: #fff;
  color: #000;
  font-family: Georgia, "Times New Roman", serif;
  font-weight: 300;
  line-height: 1.6;
}
.container .form-control{
    border-radius: 5px;
}
.content_wrap{margin-top: 40px;}

